Thu Jun 26 20:49:54 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Fixed typo.

Thu Jun 26 20:44:58 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Fixed printing log files when test fails.

Thu Jun 26 20:31:43 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Added TestFramework for doing common run_test.pl activities.

        * tests/DCPS/Messenger/run_test.pl:

          Changed to use TestFramework.

Thu Jun 26 20:30:06 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/Utils/DDSApp.h:

          Fixed missed use of domain_participant_factory.

Thu Jun 26 20:14:56 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/PersistentInfoRepo/Subscriber.cpp:

          Moved construction of DDSApp inside try-catch-block.

        * tests/Utils/DDSApp.h:
        * tests/Utils/DDSApp.cpp:

          Cleaned up unneeded calls and methods.

Thu Jun 26 19:55:23 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/MessageTracker.cpp:
        * dds/DCPS/WriteDataContainer.cpp:

          Fixed exiting loop when timeout occurs.

Thu Jun 26 19:34:36 UTC 2014  Phillip LaBanca  <labanca_p@ociweb.com>

        * tests/DCPS/PersistentInfoRepo/Publisher.cpp:

          Moved topic creation to after argument processing

        * tests/Utils/DDSApp.h:
        * tests/Utils/DDSApp.cpp:

          Changed DDSApp constructor to explictly initalize
          DomainParticipantFactory

Thu Jun 26 17:19:03 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/Utils/DDSApp.h:

          Added comments for usage of topic overloaded methods.

Thu Jun 26 16:02:01 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Added logging for tracking when waiting for pending messages.

        * tests/DCPS/LargeSample/run_test.pl:
